--- a/typewriter/package.json
+++ b/typewriter/package.json
@@ -8,9 +8,15 @@
   },
   "bugs": "https://github.com/scripts/typewriter/issues",
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.58",
+    "@inquirer/prompts": "^5.5.0",
     "@oclif/core": "^4",
     "@oclif/plugin-help": "^6",
-    "@oclif/plugin-plugins": "^5"
+    "@oclif/plugin-plugins": "^5",
+    "ai": "^3.3.28",
+    "dotenv": "^16.4.5",
+    "openai": "^4.58.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
@@ -18,6 +24,7 @@
     "@types/chai": "^4",
     "@types/mocha": "^10",
     "@types/node": "^18",
+    "@types/react": "^18.3.5",
     "chai": "^4",
     "eslint": "^8",
     "eslint-config-oclif": "^5",
@@ -67,7 +74,8 @@
     "posttest": "yarn lint",
     "prepack": "oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme && git add README.md",
+    "typewriter": "./bin/run.js"
   },
   "types": "dist/index.d.ts"
 }
