--- a/typewriter/.eslintrc.json
+++ b/typewriter/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["oclif", "oclif-typescript", "prettier"]
+  "extends": ["oclif", "oclif-typescript", "prettier"],
+  "rules": {
+    "perfectionist/sort-classes": "off",
+    "perfectionist/sort-objects": "off",
+    "perfectionist/sort-object-types": "off",
+    "perfectionist/sort-named-imports": "off"
+  }
 }
