--- a/typewriter/tsconfig.json
+++ b/typewriter/tsconfig.json
@@ -6,7 +6,9 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2022",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["./src/**/*"],
   "ts-node": {
