--- a/typewriter/package.json
+++ b/typewriter/package.json
@@ -14,9 +14,11 @@
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
     "ai": "^3.3.28",
+    "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "openai": "^4.58.1",
-    "typewriter-tools": "^1.1.33",
+    "terminal-link": "^3.0.0",
+    "typewriter-tools": "^1.1.37",
     "zod": "^3.23.8"
   },
   "devDependencies": {
